Dodanie testow DonationImpl i poprawa testów RerportImpl